--- a/gradle.properties
+++ b/gradle.properties
@@ -22,5 +22,5 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
-glideVersion=4.15.0
+coilVersion=2.2.2
 ktorVersion=2.2.4
